@@ -43,6 +43,7 @@ import org.apache.commons.dbutils.ResultSetHandler;
 import org.apache.commons.dbutils.handlers.BeanHandler;
 import org.apache.commons.dbutils.handlers.BeanListHandler;
 import org.apache.commons.dbutils.handlers.ColumnListHandler;
+import org.apache.commons.dbutils.handlers.ScalarHandler;
 import org.apache.commons.lang3.StringUtils;
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -633,5 +634,28 @@ public class UserGroupService {
 
 		ResultSetHandler<List<String>> h = new ColumnListHandler<>("USERNAME");
 		return dbService.query(sql, h, userGroupId);
+	}
+	
+	/**
+	 * Returns <code>true</code> if a user group with the given name exists
+	 *
+	 * @param name the user group name
+	 * @return <code>true</code> if a user group with the given name exists
+	 * @throws SQLException
+	 */
+	@Cacheable(value = "userGroups")
+	public boolean userGroupExists(String name) throws SQLException {
+		logger.debug("Entering userGroupExists: name='{}'", name);
+
+		String sql = "SELECT COUNT(*) FROM ART_USER_GROUPS"
+				+ " WHERE NAME=?";
+		ResultSetHandler<Number> h = new ScalarHandler<>();
+		Number recordCount = dbService.query(sql, h, name);
+
+		if (recordCount == null || recordCount.longValue() == 0) {
+			return false;
+		} else {
+			return true;
+		}
 	}
 }
